--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,7 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: esbuild
-    versions:
-    - 0.11.0
-    - 0.9.0
-  - dependency-name: idb
-    versions:
-    - 6.0.0
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: daily
