--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^7.27.0",
     "nanoid": "^3.1.23",
     "npm-run-all": "^4.1.5",
+    "prettier-config-daaku": "^1.0.0",
     "qunit": "^2.15.0",
     "typescript": "^4.3.2"
   },
