--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Resilient uploading of blobs to Firebase Storage.",
   "repository": "git@github.com:daaku/firebase-blob-db",
   "license": "MIT",
-  "prettier": "prettier-config-daaku",
   "type": "module",
   "exports": {
     ".": {
@@ -13,35 +12,29 @@
       "types": "./dist/src/index.d.ts"
     }
   },
-  "eslintConfig": {
-    "extends": "@daaku"
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "scripts": {
-    "check:types": "tsc --noEmit",
-    "check:lint": "eslint --fix --ignore-pattern dist .",
-    "check": "run-p 'check:*' 'test'",
-    "build:js": "tsc",
-    "build:test": "esbuild --bundle --sourcemap --define:process.env.NODE_ENV=\\\"production\\\" --outdir=dist/bundle test/tests.ts",
-    "test": "npm run build:test && TIMEOUT=30000 qunit-puppeteer",
-    "build": "run-p check:lint test build:js",
-    "deploy": "npm run build && npm publish --access=public"
+    "build": "tsc",
+    "test": "vite build && TIMEOUT=30000 qunit-puppeteer",
+    "deploy": "npm run test && npm publish --access=public",
+    "prepare": "npm run build",
+    "dev": "vite"
   },
   "keywords": [
     "firebase",
     "api"
   ],
   "devDependencies": {
-    "@daaku/eslint-config": "^4.0.0",
     "@daaku/firebase-auth": "^2.2.0",
-    "@daaku/qunit-puppeteer": "^3.0.0",
+    "@daaku/qunit-puppeteer": "^3.3.0",
     "@types/qunit": "^2.11.2",
-    "esbuild": "^0.19.0",
-    "eslint": "^8.1.0",
     "nanoid": "^5.0.1",
-    "npm-run-all": "^4.1.5",
-    "prettier-config-daaku": "^1.0.0",
     "qunit": "^2.17.2",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vite": "^5.0.2"
   },
   "dependencies": {
     "@daaku/firebase-storage": "^2.0.0",
